[gd_scene load_steps=4 format=3 uid="uid://cmw52por2iar0"]

[ext_resource type="Theme" uid="uid://b66pwk66dh8td" path="res://addons/noded/noded_theme.tres" id="1_ct35j"]
[ext_resource type="Script" path="res://addons/noded/project_process/process.gd" id="2_1h6xt"]
[ext_resource type="PackedScene" uid="uid://dn64nalj7d71h" path="res://addons/noded/project_process/pick_needed_tasks.tscn" id="3_l351w"]

[node name="Process" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_ct35j")
script = ExtResource("2_1h6xt")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1

[node name="Tasks" type="ScrollContainer" parent="TabContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="TabContainer/Tasks"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"IndentPanel"

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Tasks/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Tasks/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FeaturesRoot" type="VBoxContainer" parent="TabContainer/Tasks/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="AddFeatBtn" type="Button" parent="TabContainer/Tasks/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "- Add Feature -"

[node name="Timeline" type="PanelContainer" parent="TabContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Timeline"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Timeline/MarginContainer"]
layout_mode = 2

[node name="TimeLineGraph" type="GraphEdit" parent="TabContainer/Timeline/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
show_grid = false
snapping_distance = 32
minimap_enabled = false
show_grid_buttons = false
show_minimap_button = false
show_arrange_button = false

[node name="StartMark" type="GraphElement" parent="TabContainer/Timeline/MarginContainer/HBoxContainer/TimeLineGraph"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 20.0
offset_top = 240.0
offset_right = 63.0
offset_bottom = 263.0
position_offset = Vector2(20, 240)
draggable = false
selectable = false

[node name="Label" type="Label" parent="TabContainer/Timeline/MarginContainer/HBoxContainer/TimeLineGraph/StartMark"]
layout_mode = 2
text = "Start"

[node name="FinishMark" type="GraphElement" parent="TabContainer/Timeline/MarginContainer/HBoxContainer/TimeLineGraph"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 64.0
offset_top = 291.0
offset_right = 110.0
offset_bottom = 314.0
position_offset = Vector2(64, 291)
draggable = false
selectable = false

[node name="Label" type="Label" parent="TabContainer/Timeline/MarginContainer/HBoxContainer/TimeLineGraph/FinishMark"]
layout_mode = 2
text = "Finish"

[node name="TaskPicker" parent="TabContainer/Timeline" node_paths=PackedStringArray("process") instance=ExtResource("3_l351w")]
unique_name_in_owner = true
visible = false
layout_mode = 2
process = NodePath("../../..")

[node name="disposables" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="tab_changed" from="TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="pressed" from="TabContainer/Tasks/PanelContainer/MarginContainer/VBoxContainer/AddFeatBtn" to="." method="_on_add_feat_btn_pressed"]
